syntax = "proto3";
package dpospb;

message State {
  bytes candidate_root_hash = 1;
  bytes dynasty_root_hash = 2;
}
